tests/fixtures/invalid/pow_str_float_bytes.py
# Cannot call pow() with Str, Float, Bytes
x = pow("hello", 1.0, b"hello")
